--- a/scripts/R_and_Py_together.ipynb
+++ b/scripts/R_and_Py_together.ipynb
@@ -373,21 +373,70 @@
    "source": [
     "py_run_file(\"modelling_distributions.py\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "imperial-court",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: rpy2 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (3.4.2)\r\n",
+      "Requirement already satisfied: cffi>=1.10.0 in /home/petra/.local/lib/python3.8/site-packages (from rpy2) (1.14.5)\r\n",
+      "Requirement already satisfied: jinja2 in /home/petra/.local/lib/python3.8/site-packages (from rpy2) (2.11.3)\r\n",
+      "Requirement already satisfied: pytz in /home/petra/.local/lib/python3.8/site-packages (from rpy2) (2021.1)\r\n",
+      "Requirement already satisfied: tzlocal in /home/petra/.local/lib/python3.8/site-packages (from rpy2) (2.1)\r\n",
+      "Requirement already satisfied: pycparser in /home/petra/.local/lib/python3.8/site-packages (from cffi>=1.10.0->rpy2) (2.20)\r\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in /home/petra/.local/lib/python3.8/site-packages (from jinja2->rpy2) (1.1.1)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install rpy2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "coral-tooth",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Cell magic `%%R` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%R\n",
+    "\n",
+    "test<- c(1,2,3)\n",
+    "test"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R",
-   "language": "R",
-   "name": "ir"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "r",
-   "file_extension": ".r",
-   "mimetype": "text/x-r-source",
-   "name": "R",
-   "pygments_lexer": "r",
-   "version": "4.0.3"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
