--- a/scripts/zotero_cite2c_dev.ipynb
+++ b/scripts/zotero_cite2c_dev.ipynb
@@ -2,17 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip install pyzotero\n",
-    "import requests\n",
-    "import sddk"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -20,7 +9,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your ScienceData username (e.g. '123456@au.dk'): 648597@au.dk\n",
+      "Requirement already satisfied: pyzotero in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (1.4.23)\n",
+      "Requirement already satisfied: sddk in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (3.0)\n",
+      "Requirement already satisfied: feedparser<6,>5.1.0 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from pyzotero) (5.2.1)\n",
+      "Requirement already satisfied: pytz in /home/petra/.local/lib/python3.8/site-packages (from pyzotero) (2021.1)\n",
+      "Requirement already satisfied: requests>=2.21.0 in /home/petra/.local/lib/python3.8/site-packages (from pyzotero) (2.25.0)\n",
+      "Requirement already satisfied: bibtexparser in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from pyzotero) (1.2.0)\n",
+      "Requirement already satisfied: pathlib in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from pyzotero) (1.0.1)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /home/petra/.local/lib/python3.8/site-packages (from requests>=2.21.0->pyzotero) (2.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/petra/.local/lib/python3.8/site-packages (from requests>=2.21.0->pyzotero) (2020.11.8)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in /home/petra/.local/lib/python3.8/site-packages (from requests>=2.21.0->pyzotero) (3.0.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/petra/.local/lib/python3.8/site-packages (from requests>=2.21.0->pyzotero) (1.26.2)\n",
+      "Requirement already satisfied: beautifulsoup4>=4 in /home/petra/.local/lib/python3.8/site-packages (from sddk) (4.9.3)\n",
+      "Requirement already satisfied: plotly>=4 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from sddk) (4.14.3)\n",
+      "Requirement already satisfied: geopandas in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from sddk) (0.9.0)\n",
+      "Requirement already satisfied: kaleido>=0.2.1 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from sddk) (0.2.1)\n",
+      "Requirement already satisfied: matplotlib>=3.3.4 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from sddk) (3.3.4)\n",
+      "Requirement already satisfied: pyarrow>=3 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from sddk) (3.0.0)\n",
+      "Requirement already satisfied: numpy>=1 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from sddk) (1.19.5)\n",
+      "Requirement already satisfied: shapely in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from sddk) (1.7.1)\n",
+      "Requirement already satisfied: pandas>=1 in /home/petra/.local/lib/python3.8/site-packages (from sddk) (1.2.2)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /home/petra/.local/lib/python3.8/site-packages (from beautifulsoup4>=4->sddk) (2.0.1)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /home/petra/.local/lib/python3.8/site-packages (from matplotlib>=3.3.4->sddk) (2.4.7)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from matplotlib>=3.3.4->sddk) (0.10.0)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from matplotlib>=3.3.4->sddk) (8.1.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from matplotlib>=3.3.4->sddk) (1.3.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /home/petra/.local/lib/python3.8/site-packages (from matplotlib>=3.3.4->sddk) (2.8.1)\n",
+      "Requirement already satisfied: six in /home/petra/.local/lib/python3.8/site-packages (from cycler>=0.10->matplotlib>=3.3.4->sddk) (1.15.0)\n",
+      "Requirement already satisfied: retrying>=1.3.3 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from plotly>=4->sddk) (1.3.3)\n",
+      "Requirement already satisfied: future>=0.16.0 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from bibtexparser->pyzotero) (0.18.2)\n",
+      "Requirement already satisfied: pyproj>=2.2.0 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from geopandas->sddk) (3.0.1)\n",
+      "Requirement already satisfied: fiona>=1.8 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from geopandas->sddk) (1.8.19)\n",
+      "Requirement already satisfied: cligj>=0.5 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from fiona>=1.8->geopandas->sddk) (0.7.1)\n",
+      "Requirement already satisfied: click<8,>=4.0 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from fiona>=1.8->geopandas->sddk) (7.1.2)\n",
+      "Requirement already satisfied: munch in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from fiona>=1.8->geopandas->sddk) (2.5.0)\n",
+      "Requirement already satisfied: attrs>=17 in /home/petra/.local/lib/python3.8/site-packages (from fiona>=1.8->geopandas->sddk) (19.1.0)\n",
+      "Requirement already satisfied: click-plugins>=1.0 in /home/petra/.pyenv/versions/3.8.7/lib/python3.8/site-packages (from fiona>=1.8->geopandas->sddk) (1.1.1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pyzotero sddk -U\n",
+    "import requests\n",
+    "import sddk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your ScienceData username (e.g. '123456@au.dk'): 648560@au.dk\n",
       "Your ScienceData password: ········\n",
       "endpoint variable has been configured to: https://sciencedata.dk/files/\n"
      ]
@@ -32,9 +75,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file has not been found; check filename and path.\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-8a037e795813>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mzot_keys\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"zot_keys.json\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"dict\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mlibrary_id\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mzot_keys\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"user_id\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# or: getpass.getpass(\"insert your id: \")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mapi_key\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mzot_keys\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"key\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# or: getpass.getpass(\"insert your key: \")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "# based on https://pyzotero.readthedocs.io/en/latest/\n",
     "\n",
@@ -481,9 +543,9 @@
    }
   },
   "kernelspec": {
-   "display_name": "test_venv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "test_venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -495,7 +557,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.7"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
