--- a/scripts/zotero_cite2c_Petra.ipynb
+++ b/scripts/zotero_cite2c_Petra.ipynb
@@ -65,8 +65,7 @@
     }
    ],
    "source": [
-    "api_key =  getpass.getpass(\"Paste your key: \")\n",
-    "# NKE2LVpFE38rrZbD5U7ucgJN"
+    "api_key =  getpass.getpass(\"Paste your key: \")\n"
    ]
   },
   {
